[gd_scene load_steps=2 format=3 uid="uid://bpfpvcjsoyrow"]

[ext_resource type="Script" path="res://cs/character_selection.gd" id="1_4fi0b"]

[node name="CharacterManagement" type="Node3D"]
script = ExtResource( "1_4fi0b" )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayButton" type="Button" parent="GUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -357.0
offset_top = -77.0
offset_right = -186.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 0
text = "No Character Chosen"

[node name="DownloadStatus" type="ColorRect" parent="GUI"]
offset_left = 408.0
offset_top = 275.0
offset_right = 630.0
offset_bottom = 320.0
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="DownloadStatusLabel" type="Label" parent="GUI/DownloadStatus"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = -8.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="GUI/PlayButton" to="." method="_on_play_button_pressed"]
